--- a/todoListSenai/views/index.html
+++ b/todoListSenai/views/index.html
@@ -6,6 +6,7 @@
     <title>TODOLIST NODE</title>
     <link rel="stylesheet" href="/public/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.21.0/dist/sweetalert2.min.css">
 </head>
 <body class="container">
     <div class="tarefas">
@@ -20,13 +21,18 @@
     </div>
     <script >
         function validarFormulario() {
-            var tarefa = document.getElementsByName("tarefa")[0].value;
+            var tarefa = document.getElementsByName("tasks")[0].value;
             if(tarefa.trim() === ''){
-                alert("Por favor, preencha a tarefa antes de enviar.");
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Oops...',
+                    text: 'Por favor, preencha a tarefa antes de enviar',
+                });
                 return false
             }
             return true;
         }
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.21.0/dist/sweetalert2.all.min.js"></script>
 </body>
 </html>
