--- a/todoListSenai/public/style.css
+++ b/todoListSenai/public/style.css
@@ -7,7 +7,7 @@
 
 body {
   min-height: 100vh;
-  background-image: linear-gradient(rgb(7, 11, 91), rgb(102, 207, 100)); /* azul escuro para verde */
+  background: linear-gradient(rgb(7, 11, 91), rgb(102, 207, 100));
 }
 
 .tarefas{
